todo->lagre filliste